test: Particles data

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			Reaction Sensitivity (Optional, Default Value is 2)
 			Line Thickness (Optional, Default value is 1)
 		*/
-		ImageParticles.initialize('canvas', '' + imageData, 10, 28, 1);
+		ImageParticles.initialize('canvas', imageData, 10, 28, 1);
 	</script>
 </body>
 
