--- a/example1.html
+++ b/example1.html
@@ -11,6 +11,10 @@
             box-sizing: border-box;
         }
 
+        body {
+            background: url('images/Whale-[Fondo].jpg');
+        }
+
         body,
         html {
             width: 100%;
